fix alignment

--- a/iteration2/game1/css/style.css
+++ b/iteration2/game1/css/style.css
@@ -43,7 +43,6 @@ li div {
 }
 
 li img {
-    display: table-cell;
     vertical-align: middle;
 }
 
